<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloVentas"
            android:textStyle="bold"
            android:textColor="@color/Green"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

        <RadioGroup
            android:id="@+id/rgProductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/rbTelevisor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Televisor"
                android:buttonTint="@color/Green"/>

            <RadioButton
                android:id="@+id/rbRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Radio"
                android:buttonTint="@color/Green"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Precio"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/Green"/>

        <CheckBox
            android:id="@+id/cbDescuento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descuento"
            android:buttonTint="@color/Green"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edDescuento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descuento2"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/Green"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Calcula"
            android:textStyle="bold"
            android:layout_marginVertical="15dp"/>

        <EditText
            android:id="@+id/edTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Total"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:backgroundTint="@color/Green"
            android:enabled="false"/>
    </LinearLayout>
</ScrollView>
